<resources>
    <string name="app_name">Pixlee SDK Demo</string>
    <string name="action_settings">Settings</string>

    <!-- Title -->
    <string name="title_index">Index</string>
    <string name="title_java_album">Album List (Java)</string>
    <string name="title_ktx_album_list">Album List (Kotlin.coroutines)</string>
    <string name="title_ktx_album_grid">Album Grid (Kotlin.coroutines)</string>
    <string name="title_java_upload">Upload Image/Video (Java)</string>
    <string name="title_java_analytics">Call Analytics (Java)</string>
    <string name="title_ktx_analytics">Call Analytics (Kotlin.coroutines)</string>
    <string name="title_image_viewer">Image Viewer</string>
    <string name="title_video_viewer">Video Viewer</string>
    <string name="title_pxlphoto_activity">PXLPhoto in Activity</string>
    <string name="title_pxlphotoview">PXLPhotoView</string>
    <string name="title_pxlphotoview_in_recyclerview">PXLPhotoView in RecyclerView</string>
    <string name="title_pixleeLive">Pixlee Live</string>

    <string name="title_widgets">Widgets</string>
    <string name="title_photo_on_list">PXLPhoto on RecyclerView</string>

    <string name="index_java_apis">How to use Java APIs</string>
    <string name="index_ktx_apis">How to use Ktx.coroutines APIs</string>
    <string name="index_components">How to use UI components</string>

    <!-- Album -->
    <string name="album_loading_ing">Album loading..</string>
    <string name="album_loading_complete">Album loaded!</string>
    <string name="album_loading_failed">Album loading failed, reason: %s</string>

    <!-- Analytics -->
    <string name="xxx_is_called">%s is Called.</string>
    <string name="guide_load_more">
        You want more practical examples?\n
        1. Go back Home in this app\n
        2. To to any image list\n
        3. Scroll down to the bottom\n
        4. Load More will be fired. Check LogCat
    </string>

    <!-- Upload -->
    <string name="please_wait">Please wait..</string>
    <string name="upload_success_message">Complete</string>
    <string name="upload_failure_message">Failed</string>
    <string name="storage_permission_for_uploading">\'Storage\' permission is needed to upload a photo in the app setting</string>
    <string name="button_setting">Setting</string>

    <string name="guide_widget">
        This example demonstrates when you have to fire \'Opened Widget\' and \'Widget Visible\'.\n\n
        Be aware of the difference between \'Opened Widget\' and \'Widget Visible\'.\n\n
        \'Opened Widget\': You should fire this when firing the api is done and loading the photo data into your own view for the widget is complete.\n\n
        \'Widget Visible\': \'Opened Widget\' should be fired first. Then, you can fire this when your own view for the widget started to be visible on the screen.
    </string>

    <string name="radio_none">none</string>
    <string name="radio_false">false</string>
    <string name="radio_true">true</string>

    <string name="radio_album">Album</string>
    <string name="radio_pdp">PDP</string>

    <string name="darkMode">Dark Mode</string>
    <string name="darkModeTip">This demonstrates how Pixlee\'s widgets look when local DarkMode is turned ON or OFF</string>

    <string name="galleryPhotoLauncherMessage">To open PXLPhoto, which viewer would like to launch?</string>
    <string name="next">Next</string>

    <string name="start_publishing">Start Publishing</string>
    <string name="stop_publishing">Stop Publishing</string>
    <string name="started_publishing">Publishing Started</string>
    <string name="stopped_publishing">Publishing Stopped</string>
    <string name="disconnected_publishing">Publishing Disconnected</string>
    <string name="failed_publishing">Failed To Connect</string>

    <string name="error_empty_url">url is empty</string>

    <string name="publishing_label">LIVE  %1$s:%2$s</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rationale_location_contacts">This app needs access to your camera and audio to start the live camera.</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \Record Audio: %s
    </string>
</resources>
